# Kolmogorov-Arnold-Networks--KANs-

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  dvc.yaml  environment.yml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: data.yaml  figures.yaml  model.yaml  screen.yaml  train.yaml
scripts/: 01_extract.py  02_curate.py  03_split.py  04_featurize.py  05_baselines.py  06_train_kan.py  07_symbolic.py  08_evaluate.py  09_screen.py  10_analyze_hits.py
src/brd4kan/: __init__.py  cli.py  predict.py
src/brd4kan/data/: __init__.py  curate.py  extract.py  split.py
src/brd4kan/explain/: __init__.py  shap_analysis.py  symbolic.py
src/brd4kan/features/: __init__.py  graphs.py  mordred.py  morgan.py  run.py
src/brd4kan/models/: __init__.py  baselines.py  chemprop_wrapper.py  conformal.py  kan_model.py
src/brd4kan/screen/: __init__.py  analyze_hits.py  report.py  screening.py
src/brd4kan/train/: __init__.py  applicability.py  bootstrap.py  cv.py  metrics.py  mlflow_utils.py  run_baselines.py  run_evaluate.py  run_kan.py  train_kan.py
src/brd4kan/utils/: __init__.py  config.py  hashing.py  manifest.py  runs.py  seed.py
src/brd4kan/viz/: __init__.py  figures.py  style.py
tests/: conftest.py  test_baselines.py  test_cli.py  test_curate.py  test_evaluate.py  test_extract.py  test_featurize.py  test_graphs.py  test_kan.py  test_metrics.py  test_pipeline.py  test_screen.py  test_smoke_e2e.py  test_split.py  test_style.py  test_symbolic.py  test_utils.py
